# dialect

./: README.md  USER_GUIDE.md  app.py  cli.py  pyproject.toml  requirements.txt
1/: README.md  app.py  cli.py  pyproject.toml  requirements.txt
1/src/dialect_transcription/: audio.py  models.py  speech2phoneme.py  speech2text.py
src/dialect_transcription/: __init__.py  audio.py  report.py  runtime.py  speech2text.py
tests/: test_phonemizer.py
